# xrslam

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-ios.conf.defaults  build-ios.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: build.yml  lint.yml
cmake/Modules/: SuperBuildDepends.cmake
cmake/Modules/Platform/: ios.toolchain.cmake
cmake/depends/: argparse.cmake  ceres-solver.cmake  eigen.cmake  glad.cmake  glfw.cmake  imgui.cmake  liteviz.cmake  spdlog.cmake  yaml-cpp.cmake
cmake/options/: cpp11.cmake  cpp14.cmake  cpp17.cmake  modern-cpp.cmake
configs/: euroc.yaml  euroc_sensor.yaml  euroc_slam.yaml  iphone12.yaml  iphone_slam.yaml  iphonex.yaml  tum_sensor.yaml
docker/: Dockerfile
docs/en/: Doxyfile.in  benchmark.md  changelog.md  conf.py  config_parse.md  cpp_api.rst  faq.md  get_started.md  index.rst  installation.md  supported_devices.md  test.md
docs/en/tutorials/: app_intro.md  euroc_evaluation.md
docs/images/: mainpage.md
requirements/: docs.txt
xrslam/: CMakeLists.txt
xrslam-extra/: CMakeLists.txt
xrslam-extra/include/xrslam/extra/: image_undistorter.h  opencv_image.h  poisson_disk_filter.h  yaml_config.h
xrslam-extra/src/xrslam/extra/: opencv_image.cpp  yaml_config.cpp
xrslam-interface/: CMakeLists.txt
xrslam-interface/include/: XRSLAM.h
xrslam-interface/src/: XRSLAMInternal.cpp  XRSLAMManager.cpp  XRSLAMManager.h
xrslam-ios/: CMakeLists.txt
xrslam-ios/visualizer/: CMakeLists.txt
xrslam-ios/visualizer/cmake/: Info.plist.in
xrslam-ios/visualizer/configs/: SENSESLAMSDK_165BA1A4-F959-4790-A891-C85DBF5D26EA.lic  iPhone 11 Pro Max.yaml  iPhone 11 Pro.yaml  iPhone 11.yaml  iPhone 12 Mini.yaml  iPhone 12 Pro Max.yaml  iPhone 12 Pro.yaml  iPhone 12.yaml  iPhone 13 Mini.yaml  iPhone 13 Pro Max.yaml  iPhone 13 Pro.yaml  iPhone 13.yaml  iPhone 14 Plus.yaml  iPhone 14 Pro Max.yaml  iPhone 14 Pro.yaml  iPhone 8.yaml  iPhone X.yaml  iPhone XR.yaml  iPhone XS Max.yaml  iPhone XS.yaml  params.yaml  slam_params.yaml
xrslam-ios/visualizer/resources/: LaunchScreen.storyboard  Main.storyboard
xrslam-ios/visualizer/scn/: XRLAB.scn  mac.scn
xrslam-ios/visualizer/src/: AppDelegate.swift  AppUtility.swift  Camera.swift  Motion.swift  NodeUtils.swift  SwiftBridge.h  Toast.swift  UIDevice+Model.swift  VideoToolbox+extensions.swift  ViewController.swift  XRSLAM.h  XRSLAM.mm  XRSLAM2.h  XRSLAMIosConfig.cpp  XRSLAMIosConfig.h  XRSLAM_iOS.mm  XRSLAMer.swift
xrslam-liteviz/: CMakeLists.txt  framebuffer.h  glshader.h  mesh.h  shader.h  viewer.cpp  viewer.h  viewport.h  window.h
xrslam-localization/: CMakeLists.txt
xrslam-localization/include/: XRGlobalLocalizer.h
xrslam-localization/src/: XRGlobalLocalizerInternal.cpp  XRGlobalLocalizerManager.cpp  XRGlobalLocalizerManager.h
xrslam-pc/: CMakeLists.txt
xrslam-pc-depreated/lightvis/include/: image.h  lightvis.h
xrslam-pc-depreated/player/: CMakeLists.txt
xrslam-pc/libsensors/: CMakeLists.txt
xrslam-pc/libsensors/include/: libsensors.h
xrslam-pc/libsensors/src/: libsensors.cpp
xrslam-pc/lightvis/: CMakeLists.txt
xrslam-pc/lightvis/include/: lightvis.h  shader.h
xrslam-pc/lightvis/src/: image.cpp  lightvis.cpp  lightvis_font_roboto.cpp  lightvis_font_roboto.h
xrslam-pc/player/: CMakeLists.txt
xrslam-pc/player/src/: async_dataset_reader.h  dataset_reader.h  main.cpp  opencv_painter.h  trajectory_writer.h  tum_dataset_reader.h  visualizer.cpp  visualizer.h
xrslam-pc/player/src/IO/: async_dataset_reader.cpp  async_dataset_reader.h  dataset_reader.cpp  dataset_reader.h  euroc_dataset_reader.cpp  euroc_dataset_reader.h  sensors_dataset_reader.cpp  sensors_dataset_reader.h  trajectory_writer.h  tum_dataset_reader.cpp  tum_dataset_reader.h
xrslam-ros/src/xrslam-ros/: CMakeLists.txt  package.xml  rviz_config.rviz
xrslam-ros/src/xrslam-ros/launch/: euroc.launch  rviz.launch
xrslam-ros/src/xrslam-ros/src/: xrslam_node.cpp
xrslam-test/: CMakeLists.txt
xrslam-test/test/: CMakeLists.txt
xrslam-test/test/src/: test_feature_track.cpp  test_main.cpp  test_se3_cost_function.cpp  test_version.cpp
xrslam/cmake/: version.h.in
xrslam/include/xrslam/: bridge.h  dataset_reader.h  inspection.h  xrslam.h
xrslam/src/xrslam/: bridge.cpp  common.h  config.cpp  inspection.cpp  xrslam.cpp
xrslam/src/xrslam/ar/: virtual_object_manager.cpp  virtual_object_manager.h
xrslam/src/xrslam/core/: detail.cpp  detail.h  feature_tracker.cpp  feature_tracker.h  frontend_worker.cpp  frontend_worker.h  initializer.cpp  initializer.h  sliding_window_tracker.cpp  sliding_window_tracker.h
xrslam/src/xrslam/estimation/: marginalization_factor.h  preintegration_factor.h  preintegrator.cpp  preintegrator.h  reprojection_factor.h  rotation_factor.h  solver.cpp  solver.h  state.h
xrslam/src/xrslam/estimation/ceres/: cost_function_validator.h  marginalization_factor.h  preintegration_factor.h  quaternion_parameterization.h  reprojection_factor.h  rotation_factor.h
xrslam/src/xrslam/extra/: async_dataset_reader.cpp  async_dataset_reader.h  dataset_reader.cpp  euroc_dataset_reader.cpp  euroc_dataset_reader.h  image_undistorter.h  opencv_image.cpp  opencv_image.h  opencv_painter.h  poisson_disk_filter.h  tum_dataset_reader.cpp  tum_dataset_reader.h  yaml_config.cpp  yaml_config.h
xrslam/src/xrslam/geometry/: essential.cpp  essential.h  homography.cpp  homography.h  lie_algebra.cpp  lie_algebra.h  pnp.h  stereo.cpp  stereo.h  wahba.h
xrslam/src/xrslam/localizer/: base64.h  base64_convert.h  httplib.h  json.h  localizer.cpp  localizer.h
xrslam/src/xrslam/map/: frame.cpp  frame.h  map.cpp  map.h  track.cpp  track.h
xrslam/src/xrslam/optimizer/: linear_base.h  linear_problem.h  linear_solving.h  loss_functin.h  solver.h  tiny_preintegration_factor.h  tiny_reprojection_factor.h
xrslam/src/xrslam/utility/: client.h  debug.cpp  debug.h  identifiable.h  imu_parsac.h  logger.h  message.h  parsac.h  poisson_disk_filter.h  random.h  ransac.h  serialize.h  tag.h  unique_timer.h  worker.cpp  worker.h
(+159 files in other folders)
