cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
set(CMAKE_BUILD_TYPE Release)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
project(xrslam-superbuild)

if(NOT IOS)
  set(XRPrimer_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../xrprimer/install/lib/cmake")
else()
  set(XRPrimer_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../xrprimer/install/ios/lib/cmake")
endif()
find_package(XRPrimer REQUIRED)

set(CEREAL_INCLUDE_DIR ./thirdparty/cereal/include)
include_directories(${CEREAL_INCLUDE_DIR})
message(STATUS ${CEREAL_INCLUDE_DIR})

include_directories(${CMAKE_SOURCE_DIR}/src)
include_directories(/home/xiaokun/ThirdParty/ceres-solver/internal)
include_directories(/usr/include/suitesparse)

include(SuperBuildDepends)

option(XRSLAM_DEBUG "..." ON)
option(XRSLAM_ENABLE_DEBUG_INSPECTION "..." ON)
option(XRSLAM_ENABLE_THREADING "..." OFF)
option(XRSLAM_PC_HEADLESS_ONLY "..." OFF)
option(XRSLAM_IOS "..." OFF)
option(XRSLAM_TEST "..." OFF)

if(IOS)
  set(XRSLAM_IOS ON)
  set(XRSLAM_ENABLE_THREADING ON)
  #set(XRSLAM_ENABLE_DEBUG_INSPECTION OFF CACHE BOOL "..." FORCE)
endif()


if(NOT IOS)
  set(XRSLAM_PC ON)
endif()

add_subdirectory(xrslam)
add_subdirectory(xrslam-extra)
add_subdirectory(xrslam-interface)
add_subdirectory(xrslam-localization)
add_subdirectory(xrslam-liteviz)

if(XRSLAM_PC)
  add_subdirectory(xrslam-pc)
endif()
if(XRSLAM_IOS)
  add_subdirectory(xrslam-ios)
endif()
if(XRSLAM_TEST)
  add_subdirectory(xrslam-test)
endif()
